--- a/src/components/CountdownList.css
+++ b/src/components/CountdownList.css
@@ -1,6 +1,8 @@
 .countdowns {
     border: 2px solid black;
-    width: 30%;
+    width: 25%;
+    padding: 8px;
+    margin: 10px;
 }
 
 .list-of-countdowns {
