--- a/src/components/Countdown.css
+++ b/src/components/Countdown.css
@@ -4,3 +4,11 @@
     padding: 8px;
     margin: 10px;
 }
+
+button.edit-button {
+    float: left;
+}
+
+button.delete-button {
+    float: right;
+}
