--- a/src/components/CountdownForm.css
+++ b/src/components/CountdownForm.css
@@ -1,13 +1,14 @@
 .countdown-form {
+    border: 2px solid black;
     background-color: yellow;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
-    width: 250px;
-    padding: 20px;
-    box-sizing:border-box;
+    min-width: 383px;
+    max-width: 360px;
 }
 
 input[type="submit"] {
-    margin-top: 20px;
+    margin-top: 15px;
+}
+
+.submit-button {
+    padding-bottom: 20px;
 }
