--- a/src/components/CountdownForm.css
+++ b/src/components/CountdownForm.css
@@ -1,4 +1,6 @@
 .countdown-form {
+    display: flex;
+    justify-content: center;
     border: 2px solid black;
     background-color: yellow;
     min-width: 383px;
