--- a/src/components/CountdownList.css
+++ b/src/components/CountdownList.css
@@ -1,10 +1,12 @@
-.list-of-countdowns {
-    border: 1px dotted pink;
-}
-
 .container-of-countdowns {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-auto-rows: auto;
     grid-gap: 1rem;
+}
+
+.countdown-list-title {
+    font-family: monospace;
+    font-size: 55px;
+    font-weight: bold;
 }
